--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="css/style.css">
+	<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
 	<title>Karma Clone</title>
 </head>
 <body>
@@ -10,7 +11,7 @@
 		<div class="content">
 			<img class="logo" src="images/karma-logo.svg" alt="Logo Image" width="26px">
 			<ul class="links">
-				<li>Meet Karma</li>
+				<li class="active">Meet Karma</li>
 				<li>How It works</li>
 				<li>Store</li>
 				<li>Blog</li>
