--- a/index.html
+++ b/index.html
@@ -29,5 +29,10 @@
 			</div>
 		</div>
 	</section>
+	<section class="cases">
+		<div class="content">
+			<h2> Everyone needs a little Karma </h2> 
+		</div>
+	</section>
 </body>
 </html>
