--- a/index.html
+++ b/index.html
@@ -32,6 +32,26 @@
 	<section class="cases">
 		<div class="content">
 			<h2> Everyone needs a little Karma </h2> 
+			<ul class="devices">
+				<li>
+					<img src="images/icon-devices.svg" alt="Logo Devices" width="127px" height="127px">
+					<div class="caption">
+						<h3> Internet for all devices </h3>
+					</div>
+				</li>
+				<li>
+					<img src="images/icon-coffee.svg" alt="Logo Coffee" width="127px" height="127px">
+					<div class="caption">
+						<h3> Boost your productivity </h3>
+					</div>
+				</li>
+				<li>
+					<img src="images/icon-refill.svg" alt="Logo Refill" width="127px" height="127px">
+					<div class="caption">
+						<h3> Pay as You Go </h3>
+					</div>
+				</li>
+			</ul>
 		</div>
 	</section>
 </body>
