--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="css/style.css">
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
+	<!-- <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"> -->
+	<link href="css/font-awesome.min.css" rel="stylesheet">
 	<title>Karma Clone</title>
 </head>
 <body>
@@ -34,19 +36,19 @@
 			<h2> Everyone needs a little Karma </h2> 
 			<ul class="devices">
 				<li>
-					<img src="images/icon-devices.svg" alt="Logo Devices" width="127px" height="127px">
+					<img width="127px" height="127px" src="images/icon-devices.svg" alt="Logo Devices">
 					<div class="caption">
 						<h3> Internet for all devices </h3>
 					</div>
 				</li>
 				<li>
-					<img src="images/icon-coffee.svg" alt="Logo Coffee" width="127px" height="127px">
+					<img width="127px" height="127px" src="images/icon-coffee.svg" alt="Logo Coffee">
 					<div class="caption">
 						<h3> Boost your productivity </h3>
 					</div>
 				</li>
 				<li>
-					<img src="images/icon-refill.svg" alt="Logo Refill" width="127px" height="127px">
+					<img width="127px" height="127px" src="images/icon-refill.svg" alt="Logo Refill">
 					<div class="caption">
 						<h3> Pay as You Go </h3>
 					</div>
@@ -54,5 +56,25 @@
 			</ul>
 		</div>
 	</section>
+	<footer class="social"> 
+		<div class="content">	
+			<hr>
+			<h5> Join us on </h5>
+			<ul class="icons">
+				<li class="twitter">
+					<i class="fa fa-twitter"></i>
+				</li>
+				<li class="facebook">
+					<i class="fa fa-facebook"></i>
+				</li>
+				<li class="instagram">
+					<i class="fa fa-instagram"></i>
+				</li>
+			</ul>
+			<span class="copy">
+				© Karma Mobility, Inc.
+			</span>
+		</div>
+	</footer>
 </body>
 </html>
