--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="css/style.css">
-	<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
+	<link href='//fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
 	<!-- <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"> -->
-	<link href="css/font-awesome.min.css" rel="stylesheet">
+	<link href="../css/font-awesome.min.css" rel="stylesheet">
 <!--	<link rel="icon" type="image/png" href="favicon_name.png" /> -->
 <!-- or -->
-	<link rel="shortcut icon" type="image/x-icon"  href="images/favicon.ico">
+	<link rel="shortcut icon" type="../image/x-icon"  href="../images/favicon.ico">
 	<title>Karma Clone</title>
 </head>
 <body>
@@ -22,7 +22,7 @@
 				<li>Help</li>
 				<li>Log in</li>
 			</ul>
-			<img class="logo" src="images/karma-logo.svg" alt="Logo Image" width="26px">
+			<img class="logo" src="../images/karma-logo.svg" alt="Logo Image" width="26px">
 		</div>
 	</nav>
 	<section class="introduction">
@@ -39,19 +39,19 @@
 			<h2> Everyone needs a little Karma </h2> 
 			<ul class="devices">
 				<li>
-					<img width="127px" height="127px" src="images/icon-devices.svg" alt="Logo Devices">
+					<img width="127px" height="127px" src="../images/icon-devices.svg" alt="Logo Devices">
 					<div class="caption">
 						<h3> Internet for all devices </h3>
 					</div>
 				</li>
 				<li>
-					<img width="127px" height="127px" src="images/icon-coffee.svg" alt="Logo Coffee">
+					<img width="127px" height="127px" src="../images/icon-coffee.svg" alt="Logo Coffee">
 					<div class="caption">
 						<h3> Boost your productivity </h3>
 					</div>
 				</li>
 				<li>
-					<img width="127px" height="127px" src="images/icon-refill.svg" alt="Logo Refill">
+					<img width="127px" height="127px" src="../images/icon-refill.svg" alt="Logo Refill">
 					<div class="caption">
 						<h3> Pay as You Go </h3>
 					</div>
